fixed styling for page overflow from table

--- a/src/main/react-front-end/src/App.css
+++ b/src/main/react-front-end/src/App.css
@@ -288,11 +288,10 @@ div.homePage {
 }
 .historyPage {
   display: flex;
-  outline: 2px solid #00bfff;
   width: 100vw;
-  height: 100vh;
   justify-content: center;
   padding-top: 15vh;
+  padding-bottom: 15vh;
   /* align-items: center; */
 }
 
